# phytec-eeprom-flashtool

./: .gitignore  .pylintrc  COPYING.MIT  MANIFEST.in  README  README.rst  REUSE.toml  phytec_eeprom_flashtool.py  pyproject.toml  requirements-lint.txt  requirements-test.txt  requirements-windows.txt  requirements.txt  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: license-check.yaml  publish.yml  pythonpackage.yml  sync-config.yml
LICENSES/: LicenseRef-PHYTEC-Commercial-0.1.txt
configs/: PCL-066.ini  PCL-066.yml  PCL-069.yml  PCL-070.yml  PCL-071.yml  PCL-075.yml  PCL-077.yml  PCM-057.ini  PCM-057.yml  PCM-070.yml  PCM-071.yml  PCM-072.yml  PCM-074.yml  README_CONFIG.rst
docs/: .gitignore  README.rst  requirements-packages.txt  requirements.txt
docs/source/: conf.py  index.rst  installation.rst  product_overview.csv  product_overview.rst  project_definition.rst  specification.rst  usage.rst
phytec_eeprom_flashtool/: __main__.py  constants.yml
phytec_eeprom_flashtool/configs/: PCL-066.yml  PCL-069.yml  PCL-070.yml  PCL-071.yml  PCL-075.yml  PCL-077.yml  PCL-082.yml  PCM-057.yml  PCM-070.yml  PCM-071.yml  PCM-072.yml  PCM-074.yml  PFL-G-01.yml  PFL-G-02.yml  PFL-G-03.yml  PFL-G-04.yml  PFL-G-05.yml  README_CONFIG.rst
phytec_eeprom_flashtool/src/: .phytec_eeprom_flashtool.py.swp  __init__.py  blocks.py  common.py  encoding.py  io.py  phytec_eeprom_flashtool.py
scripts/: pull_option_tree.py
src/: blocks.py  common.py  encoding.py  io.py  phytec_eeprom_flashtool.py
tests/: test_cli.py  test_common.py  test_phytec_eeprom_flashtool.py
(+20 files in other folders)
