# SPDX-FileCopyrightText: 2025 PHYTEC
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phytec-eeprom-flashtool"
dynamic = ["version"]
description = "PHYTEC EEPROM Flashtool"
authors = [
    {name = "PHYTEC", email = "support@phytec.de"}
]
readme = "README.rst"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml",
    "smbus2",
    "crc8",
]

[project.scripts]
phytec_eeprom_flashtool = "phytec_eeprom_flashtool.__main__:cmd_main"

[tool.setuptools]
packages = {find = {include = ["phytec_eeprom_flashtool*"]}}
include-package-data = true

[tool.setuptools.package-data]
phytec_eeprom_flashtool = [
    "configs/*.yml",
    "constants.yml"
]

[tool.setuptools.dynamic]
version = {attr = "phytec_eeprom_flashtool.src.__init__.__version__"}

[tool.ruff]
target-version = "py313"
